--- a/index.html
+++ b/index.html
@@ -268,7 +268,9 @@
         <div class="creatorContainer">
           <h2>creator</h2>
           <div class="creatorBox">
-            <div class="cItem"></div>
+            <div class="cItem">
+              <img src="img/ueki1.webp" alt="" />
+            </div>
 
             <div class="profile">
               <h3>ユガロ</h3>
@@ -278,7 +280,10 @@
                 <br />というか今は一人なのでメインも何もないですがいずれはチームでの活動を予定してます。
               </p>
             </div>
-            <div class="cItem"></div>
+            <div class="cItem">
+              <img src="img/yumerantan.webp" alt="" />
+              <img src="img/book1.webp" alt="" />
+            </div>
 
             <ul class="creatorSNS">
               <h4>個人SNS</h4>
@@ -297,7 +302,11 @@
         <div class="contactContainer">
           <h2>contact</h2>
           <div class="contactContents">
-            <div class="cItem"></div>
+            <div class="cItem">
+              <img src="img/ueki2.webp" alt="" />
+              <img src="img/yumerantan.webp" alt="" />
+              <img src="img/book1.webp" alt="" />
+            </div>
             <div class="contactBox">
               <p class="contactInfo">
                 活動に対するお問い合わせや <br />近況はこちらから
