--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     />
     <script src="lottie/lottie-player.js"></script>
     <!-- style -->
-    <link rel="stylesheet" href="css/style.min.css?0728" />
+    <link rel="stylesheet" href="css/style.min.css?0814" />
   </head>
   <body class="hamSwich">
     <header>
@@ -283,6 +283,15 @@
             <div class="cItem">
               <img src="img/yumerantan.webp" alt="" />
               <img src="img/book1.webp" alt="" />
+              <div class="catsAnimation">
+                <lottie-player
+                  class="animationSwich"
+                  src="img/nekoshippo.json"
+                  loop
+                  mode="bounce"
+                  data-action="lottie"
+                ></lottie-player>
+              </div>
             </div>
 
             <ul class="creatorSNS">
