--- a/index.html
+++ b/index.html
@@ -325,7 +325,10 @@
               >
             </div>
 
-            <div class="cItem"></div>
+            <div class="cItem">
+              <img src="img/neko.webp" alt="" />
+              <img src="img/karasuokimno.webp" alt="" /><img src="" alt="" />
+            </div>
 
             <ul class="muyudoSNS">
               <h3>夢遊堂SNS</h3>
@@ -338,7 +341,9 @@
                 /></a>
               </li>
             </ul>
-            <div class="cItem"></div>
+            <div class="cItem">
+              <img src="img/hako1.webp" alt="" />
+            </div>
           </div>
         </div>
         <div class="contactTable">
