下レスポンシブ暫定対応

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
       <section id="contact">
         <div class="creatorContainer">
-          <h2>creator</h2>
+          <h2 class="spOnly">creator</h2>
           <div class="creatorBox">
             <div class="cItem">
               <img src="img/ueki1.webp" alt="" />
@@ -294,7 +294,7 @@
               </div>
             </div>
 
-            <ul class="creatorSNS">
+            <ul class="creatorSNS spOnly">
               <h4>個人SNS</h4>
               <li>
                 <a href=""><img src="img/SNS/Xlogo.svg" alt="" /></a>
@@ -309,7 +309,7 @@
           </div>
         </div>
         <div class="contactContainer">
-          <h2>contact</h2>
+          <h2 class="spOnly">contact</h2>
           <div class="contactContents">
             <div class="cItem">
               <img src="img/ueki2.webp" alt="" />
@@ -330,7 +330,7 @@
               <img src="img/karasuokimno.webp" alt="" /><img src="" alt="" />
             </div>
 
-            <ul class="muyudoSNS">
+            <ul class="muyudoSNS spOnly">
               <h3>夢遊堂SNS</h3>
               <li>
                 <a href=""><img src="img/SNS/Xlogo.svg" alt="" /></a>
