--- a/index.html
+++ b/index.html
@@ -279,6 +279,20 @@
                 夢遊堂のメインのクリエーターです。
                 <br />というか今は一人なのでメインも何もないですがいずれはチームでの活動を予定してます。
               </p>
+
+              <div class="creatorSNS pcOnly">
+                <ul>
+                  <h4>個人SNS</h4>
+                  <li>
+                    <a href=""><img src="img/SNS/Xlogo.svg" alt="" /></a>
+                  </li>
+                  <li>
+                    <a href=""
+                      ><img src="img/SNS/Instagram_Glyph_White.svg" alt=""
+                    /></a>
+                  </li>
+                </ul>
+              </div>
             </div>
             <div class="cItem">
               <img src="img/yumerantan.webp" alt="" />
@@ -294,17 +308,19 @@
               </div>
             </div>
 
-            <ul class="creatorSNS spOnly">
-              <h4>個人SNS</h4>
-              <li>
-                <a href=""><img src="img/SNS/Xlogo.svg" alt="" /></a>
-              </li>
-              <li>
-                <a href=""
-                  ><img src="img/SNS/Instagram_Glyph_White.svg" alt=""
-                /></a>
-              </li>
-            </ul>
+            <div class="creatorSNS spOnly">
+              <ul>
+                <h4>個人SNS</h4>
+                <li>
+                  <a href=""><img src="img/SNS/Xlogo.svg" alt="" /></a>
+                </li>
+                <li>
+                  <a href=""
+                    ><img src="img/SNS/Instagram_Glyph_White.svg" alt=""
+                  /></a>
+                </li>
+              </ul>
+            </div>
             <div class="cItem"></div>
           </div>
         </div>
@@ -323,6 +339,19 @@
               <a href="mailform/mailform.php" class="inquiry"
                 >メールフォームへ</a
               >
+              <div class="muyudoSNS pcOnly">
+                <ul>
+                  <h3>夢遊堂SNS</h3>
+                  <li>
+                    <a href=""><img src="img/SNS/Xlogo.svg" alt="" /></a>
+                  </li>
+                  <li>
+                    <a href=""
+                      ><img src="img/SNS/Instagram_Glyph_White.svg" alt=""
+                    /></a>
+                  </li>
+                </ul>
+              </div>
             </div>
 
             <div class="cItem">
@@ -330,17 +359,19 @@
               <img src="img/karasuokimno.webp" alt="" /><img src="" alt="" />
             </div>
 
-            <ul class="muyudoSNS spOnly">
-              <h3>夢遊堂SNS</h3>
-              <li>
-                <a href=""><img src="img/SNS/Xlogo.svg" alt="" /></a>
-              </li>
-              <li>
-                <a href=""
-                  ><img src="img/SNS/Instagram_Glyph_White.svg" alt=""
-                /></a>
-              </li>
-            </ul>
+            <div class="muyudoSNS spOnly">
+              <ul>
+                <h3>夢遊堂SNS</h3>
+                <li>
+                  <a href=""><img src="img/SNS/Xlogo.svg" alt="" /></a>
+                </li>
+                <li>
+                  <a href=""
+                    ><img src="img/SNS/Instagram_Glyph_White.svg" alt=""
+                  /></a>
+                </li>
+              </ul>
+            </div>
             <div class="cItem">
               <img src="img/hako1.webp" alt="" />
             </div>
