--- a/index.html
+++ b/index.html
@@ -331,6 +331,15 @@
               <img src="img/ueki2.webp" alt="" />
               <img src="img/yumerantan.webp" alt="" />
               <img src="img/book1.webp" alt="" />
+              <div class="crowAnimation">
+                <lottie-player
+                  class="animationSwich"
+                  src="img/karasu.json"
+                  loop
+                  mode="bounce"
+                  data-action="lottie"
+                ></lottie-player>
+              </div>
             </div>
             <div class="contactBox">
               <p class="contactInfo">
