サイズ微調整

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     />
     <script src="lottie/lottie-player.js"></script>
     <!-- style -->
-    <link rel="stylesheet" href="css/style.min.css?0814" />
+    <link rel="stylesheet" href="css/style.min.css?0821" />
   </head>
   <body class="hamSwich">
     <header>
@@ -275,7 +275,7 @@
             <div class="profile">
               <h3>ユガロ</h3>
               <div class="profileImg"><img src="" alt="" /></div>
-              <p class="profileinfo">
+              <p class="profileInfo">
                 夢遊堂のメインのクリエーターです。
                 <br />というか今は一人なのでメインも何もないですがいずれはチームでの活動を予定してます。
               </p>
