--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@
             <div class="cItem">
               <img src="img/yumerantan.webp" alt="" />
               <img src="img/book1.webp" alt="" />
+              <img src="img/book3.webp" alt="" />
               <div class="catsAnimation">
                 <lottie-player
                   class="animationSwich"
