アニメーション追加 ランタンと文字

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       </section>
 
       <section id="works">
-        <div class="workSpace">
+        <div class="workSpace animationSwich">
           <h2>works</h2>
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -294,10 +294,11 @@
                 </ul>
               </div>
             </div>
-            <div class="cItem">
+            <div class="cItem animationSwich">
               <img src="img/yumerantan.webp" alt="" />
               <img src="img/book1.webp" alt="" />
               <img src="img/book3.webp" alt="" />
+              <div class="light"></div>
               <div class="catsAnimation">
                 <lottie-player
                   class="animationSwich"
@@ -328,10 +329,11 @@
         <div class="contactContainer">
           <h2 class="spOnly">contact</h2>
           <div class="contactContents">
-            <div class="cItem">
+            <div class="cItem animationSwich">
               <img src="img/ueki2.webp" alt="" />
               <img src="img/yumerantan.webp" alt="" />
               <img src="img/book1.webp" alt="" />
+              <div class="light"></div>
               <div class="crowAnimation">
                 <lottie-player
                   class="animationSwich"
