--- a/index.html
+++ b/index.html
@@ -105,15 +105,23 @@
         </div>
         <!-- キャッチコピーを入れる -->
         <p class="about_catch">
-          他にはない<br /><span>ここならではの</span><br /><span
-            >デザインを</span
+          想いを形に、<br /><span>あなたに</span><br /><span
+            >特別なデザインを</span
           >
         </p>
         <!-- 一味違う楽しいデザインを -->
         <div class="about_text">
           <!-- 夢遊堂は webやグラフィック アクセサリーや雑貨を デザイン・作成し
             生活に楽しさを お届けします。 -->
-          夢遊堂ではデザインや創作を通して、
+          <p>
+            例えば、<br />
+            個性を活かしたサイトで、 <br />貴社の魅力を最大限に引き出します。
+          </p>
+          <p>
+            例えば、<br />
+            個性的なデザインの<br />アクセサリーやアートで<br />あなたの生活を彩ります。
+          </p>
+          夢遊堂では、<br />ここならではのデザインで様々なものをつくります。
         </div>
       </section>
 
@@ -332,7 +340,7 @@
             <div class="cItem animationSwich">
               <img src="img/ueki2.webp" alt="" />
               <img src="img/yumerantan.webp" alt="" />
-              <img src="img/book1.webp" alt="" />
+              <img src="img/book2.webp" alt="" />
               <div class="light"></div>
               <div class="crowAnimation">
                 <lottie-player
