文言修正、リンク挿入、位置微調整

--- a/index.html
+++ b/index.html
@@ -197,9 +197,8 @@
             <div class="works_img"><img src="img/accetest.jpg" alt="" /></div>
 
             <p class="accesory_text">
-              銀や真鍮を素材に
-              <br />遊び心のあるここだけのデザインを
-              <br />メインに制作しています。
+              銀や真鍮、レジンなどを使って
+              <br />遊び心のあるここだけのデザインを <br />制作しています。
             </p>
             <div class="zakkaSpace">
               <img src="img/pendanto.webp" alt="" />
@@ -214,10 +213,9 @@
             <div class="works_img"><img src="img/webtest.jpg" alt="" /></div>
 
             <p class="accesory_text">
-              webサイトやバナー等を作ります。<br />
-              「内容がわかりやすい」<br />
-              「印象に残る」<br />
-              ようなデザインを意識しています。
+              個性派から定番まで<br />
+              あなたの伝えたいことを形にする<br />
+              webサイトやバナーを作ります。
             </p>
             <div class="zakkaSpace">
               <img src="img/this-is-a-pen.webp" alt="" />
@@ -231,7 +229,9 @@
 
             <div class="works_img"><img src="" alt="" /></div>
 
-            <p class="accesory_text">映像つくる</p>
+            <p class="accesory_text">
+              映像制作、編集やweb用の<br />アニメーションアイコン等を作成し<br />コンテンツをより豊かにします。
+            </p>
             <div class="zakkaSpace">
               <div class="zakkaMove">
                 <lottie-player
@@ -292,10 +292,12 @@
                 <ul>
                   <h4>個人SNS</h4>
                   <li>
-                    <a href=""><img src="img/SNS/Xlogo.svg" alt="" /></a>
+                    <a href="https://x.com/fool_karasu"
+                      ><img src="img/SNS/Xlogo.svg" alt=""
+                    /></a>
                   </li>
                   <li>
-                    <a href=""
+                    <a href="https://www.instagram.com/yugaro72/"
                       ><img src="img/SNS/Instagram_Glyph_White.svg" alt=""
                     /></a>
                   </li>
