--- a/index.html
+++ b/index.html
@@ -281,11 +281,13 @@
             </div>
 
             <div class="profile">
+              <h2 class="pcOnry">creator</h2>
               <h3>ユガロ</h3>
               <div class="profileImg"><img src="" alt="" /></div>
               <p class="profileInfo">
                 夢遊堂のメインのクリエーターです。
-                <br />というか今は一人なのでメインも何もないですがいずれはチームでの活動を予定してます。
+                <br />というか今は一人なのでメインも何もないですが
+                <br />いずれはチームでの活動を予定してます。
               </p>
 
               <div class="creatorSNS pcOnly">
@@ -355,6 +357,7 @@
               </div>
             </div>
             <div class="contactBox">
+              <h2 class="pcOnry">creator</h2>
               <p class="contactInfo">
                 活動に対するお問い合わせや <br />近況はこちらから
               </p>
