fontなどの調整

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             </div>
 
             <div class="profile">
-              <h2 class="pcOnry">creator</h2>
+              <h2 class="pcOnly">creator</h2>
               <h3>ユガロ</h3>
               <div class="profileImg"><img src="" alt="" /></div>
               <p class="profileInfo">
@@ -357,7 +357,7 @@
               </div>
             </div>
             <div class="contactBox">
-              <h2 class="pcOnry">creator</h2>
+              <h2 class="pcOnly">creator</h2>
               <p class="contactInfo">
                 活動に対するお問い合わせや <br />近況はこちらから
               </p>
