modalの中身の作成 途中だけどねむい

--- a/index.html
+++ b/index.html
@@ -416,25 +416,74 @@
       <div class="modal" id="modal_accesorry">
         <div class="modalcontent">
           <button class="modoru_btn modal_return">&times;</button>
-          accesory
+          <p class="comingSoon">Coming Soon...</p>
+          <p class="modalInfo">
+            このコンテンツの個別ページは製作中です。
+            <br />以下のようなことができますので
+            <br />何かございましたらお気軽にご相談ください。
+          </p>
+
+          <div class="temporaryContents">
+            <h2 class="modaltitle">accesory</h2>
+          </div>
         </div>
       </div>
       <div class="modal" id="modal_web">
         <div class="modalcontent">
           <button class="modoru_btn modal_return">&times;</button>
-          web
+          <p class="comingSoon">Coming Soon...</p>
+          <p class="modalInfo">
+            このコンテンツの個別ページは製作中です。
+            <br />以下のようなことができますので
+            <br />何かございましたらお気軽にご相談ください。
+          </p>
+
+          <div class="temporaryContents">
+            <h2 class="modaltitle">web</h2>
+            <ul>
+              <li>lottieアニメーションなどを活用したデザインサイト</li>
+              <li>LPページ、コーポレートサイト等のウェブ制作</li>
+              <li>shopfyを用いたECページのサポート</li>
+              <li>googleアナリティクスを用いたSEO解析</li>
+              <li>バナーやアイコン等のデザイン作成</li>
+              <li>写真の編集加工</li>
+            </ul>
+            【使用言語】 ・HTML ・CSS ・PHP ・Javascript
+          </div>
         </div>
       </div>
       <div class="modal" id="modal_movie">
         <div class="modalcontent">
           <button class="modoru_btn modal_return">&times;</button>
-          movie
+          <p class="comingSoon">Coming Soon...</p>
+          <p class="modalInfo">
+            このコンテンツの個別ページは製作中です。
+            <br />以下のようなことができますので
+            <br />何かございましたらお気軽にご相談ください。
+          </p>
+
+          <div class="temporaryContents">
+            <h2 class="modaltitle">movie</h2>
+            <ul>
+              <li>映像編集や簡易なモーショングラフィック</li>
+              <li>webページ用のアニメーションボタンやアイコンの作成</li>
+            </ul>
+          </div>
         </div>
       </div>
       <div class="modal" id="modal_other">
         <div class="modalcontent">
           <button class="modoru_btn modal_return">&times;</button>
-          other
+          <p class="comingSoon">Coming Soon...</p>
+          <p class="modalInfo">
+            このコンテンツの個別ページは製作中です。
+            <br />以下のようなことができますので
+            <br />何かございましたらお気軽にご相談ください。
+          </p>
+
+          <div class="temporaryContents">
+            <h2 class="modaltitle">other</h2>
+          </div>
         </div>
       </div>
     </main>
