モーダルの文言暫定

--- a/index.html
+++ b/index.html
@@ -425,6 +425,29 @@
 
           <div class="temporaryContents">
             <h2 class="modaltitle">accesory</h2>
+            <p class="temporaryInfo">
+              金属の美しさとハンドメイドの温もりを <br class="spOnly" />大切に、
+              <br class="pcOnly" />銀や真鍮を使った彫金や鋳造による<br
+                class="spOnly"
+              />アクセサリーを制作しています。
+              <br />独自のデザインで、あなたのスタイルに<br
+                class="spOnly"
+              />ぴったりの一品を提供します。
+              <br />また、粘土やレジンを用いた造形も得意で、<br
+                class="spOnly"
+              />個性的でユニークな作品をお届けします。
+              <br />オーダーメイドにも対応しており、<br
+                class="spOnly"
+              />あなただけの特別なアクセサリーを<br
+                class="spOnly"
+              />お作りします。
+            </p>
+            <p class="modalListTitle">skill</p>
+            <ul>
+              <li>銀や真鍮を用いたアクセサリー制作</li>
+              <li>粘土やレジンを用いた造形制作</li>
+              <li>デザインから制作までのオーダーメイド対応</li>
+            </ul>
           </div>
         </div>
       </div>
@@ -440,15 +463,36 @@
 
           <div class="temporaryContents">
             <h2 class="modaltitle">web</h2>
+            <p class="temporaryInfo">
+              Lottieアニメーションを活用した<br
+                class="spOnly"
+              />インタラクティブなデザインサイトの制作や、<br />LPページ、コーポレートサイト、ECサイトの<br
+                class="spOnly"
+              />制作を行います。<br class="pcOnly" />ユーザーにとって<br
+                class="spOnly"
+              />使いやすく、かつ見た目にも美しいサイトを<br
+                class="spOnly"
+              />提供します。<br />また、Shopifyを用いたECサイトの<br
+                class="spOnly"
+              />カスタマイズや運用サポート、<br />Googleアナリティクスを活用したSEO解析と<br
+                class="spOnly"
+              />改善提案も得意としています。<br />あなたのビジネスをデジタルで支え、<br
+                class="spOnly"
+              />成果を最大化します。
+            </p>
+            <p class="modalListTitle">skill</p>
             <ul>
-              <li>lottieアニメーションなどを活用したデザインサイト</li>
+              <li>
+                lottieアニメーションなどを<br
+                  class="spOnly"
+                />活用したデザインサイト
+              </li>
               <li>LPページ、コーポレートサイト等のウェブ制作</li>
               <li>shopfyを用いたECページのサポート</li>
               <li>googleアナリティクスを用いたSEO解析</li>
               <li>バナーやアイコン等のデザイン作成</li>
               <li>写真の編集加工</li>
             </ul>
-            【使用言語】 ・HTML ・CSS ・PHP ・Javascript
           </div>
         </div>
       </div>
@@ -464,9 +508,34 @@
 
           <div class="temporaryContents">
             <h2 class="modaltitle">movie</h2>
+            <p class="temporaryInfo">
+              After Effectsを用いたアニメーション制作や<br
+                class="spOnly"
+              />プロモーションビデオの作成、<br
+                class="spOnly"
+              />動画編集を行います。<br />バナーやアイコンなどの<br
+                class="spOnly"
+              />グラフィックデザインも含め、<br
+                class="spOnly"
+              />視覚的に魅力的なコンテンツを提供します。<br />動画の編集やエフェクトの追加、<br
+                class="spOnly"
+              />カット編集など、細部にまでこだわり、<br />視覚的なインパクトを<br
+                class="spOnly"
+              />最大限に引き出す作品をお届けします。
+            </p>
+            <p class="modalListTitle">skill</p>
             <ul>
-              <li>映像編集や簡易なモーショングラフィック</li>
-              <li>webページ用のアニメーションボタンやアイコンの作成</li>
+              <li>簡易なアニメーションやモーショングラフィック</li>
+              <li>
+                webページ用のアニメーションボタンや<br
+                  class="spOnly"
+                />アイコンの作成
+              </li>
+              <li>
+                動画の編集<br
+                  class="spOnly"
+                />（カット編集、エフェクト追加、カラーグレーディング）
+              </li>
             </ul>
           </div>
         </div>
@@ -483,6 +552,27 @@
 
           <div class="temporaryContents">
             <h2 class="modaltitle">other</h2>
+            <p class="temporaryInfo">
+              ウェブ制作やアクセサリー制作だけでなく、<br
+                class="spOnly"
+              />粘土やレジンを用いた造形や<br
+                class="spOnly"
+              />ハンドメイド作品の制作も得意です。<br />幅広い素材と技術を駆使し、<br
+                class="spOnly"
+              />あなたのアイデアを<br
+                class="spOnly"
+              />形にするお手伝いをします。<br />オリジナルのプロジェクトやアート作品など、<br
+                class="spOnly"
+              />あなたのクリエイティブなビジョンを<br
+                class="spOnly"
+              />サポートします。
+            </p>
+            <p class="modalListTitle">skill</p>
+            <ul>
+              <li>粘土やレジンを用いた造形制作</li>
+              <li>ハンドメイド作品の企画・制作</li>
+              <li>多様な素材を活用したアート作品制作</li>
+            </ul>
           </div>
         </div>
       </div>
