メール送信後のレイアウト修正

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     />
     <script src="lottie/lottie-player.js"></script>
     <!-- style -->
-    <link rel="stylesheet" href="css/style.min.css?0825" />
+    <link rel="stylesheet" href="css/style.min.css?0904" />
   </head>
   <body class="hamSwich">
     <header>
@@ -334,10 +334,12 @@
               <ul>
                 <h4>個人SNS</h4>
                 <li>
-                  <a href=""><img src="img/SNS/Xlogo.svg" alt="" /></a>
+                  <a href="https://x.com/fool_karasu"
+                    ><img src="img/SNS/Xlogo.svg" alt=""
+                  /></a>
                 </li>
                 <li>
-                  <a href=""
+                  <a href="https://www.instagram.com/yugaro72/"
                     ><img src="img/SNS/Instagram_Glyph_White.svg" alt=""
                   /></a>
                 </li>
