棚追加　文字調整

--- a/index.html
+++ b/index.html
@@ -286,6 +286,9 @@
           <div class="creatorBox">
             <div class="cItem">
               <img src="img/ueki1.webp" alt="" />
+              <img src="img/neko.webp" alt="" />
+              <img src="img/cup.webp" alt="" />
+              <img src="img/tubo.webp" alt="" />
             </div>
 
             <div class="profile">
