--- a/index.html
+++ b/index.html
@@ -287,8 +287,11 @@
             <div class="cItem">
               <img src="img/ueki1.webp" alt="" />
               <img src="img/neko.webp" alt="" />
-              <img src="img/cup.webp" alt="" />
+              <img src="img/inkBottle.webp" alt="" />
               <img src="img/tubo.webp" alt="" />
+              <img src="img/tubo2.webp" alt="" />
+              <img src="img/bin.webp" alt="" />
+              <img src="img/bin.webp" alt="" />
             </div>
 
             <div class="profile">
@@ -348,7 +351,14 @@
                 </li>
               </ul>
             </div>
-            <div class="cItem"></div>
+            <div class="cItem">
+              <img src="img/book2.webp" alt="" />
+              <img src="img/book3.webp" alt="" />
+              <img src="img/hako1.webp" alt="" />
+              <img src="img/bin.webp" alt="" />
+              <img src="img/bin.webp" alt="" />
+              <img src="img/tubo2.webp" alt="" />
+            </div>
           </div>
         </div>
         <div class="contactContainer">
@@ -358,6 +368,8 @@
               <img src="img/ueki2.webp" alt="" />
               <img src="img/yumerantan.webp" alt="" />
               <img src="img/book2.webp" alt="" />
+              <img src="img/bin.webp" alt="" />
+              <img src="img/tubo.webp" alt="" />
               <div class="light"></div>
               <div class="crowAnimation">
                 <lottie-player
@@ -393,8 +405,12 @@
             </div>
 
             <div class="cItem">
-              <img src="img/neko.webp" alt="" />
-              <img src="img/karasuokimno.webp" alt="" /><img src="" alt="" />
+              <img src="img/book2.webp" alt="" />
+              <img src="img/karasuokimno.webp" alt="" />
+              <img src="img/hako1.webp" alt="" />
+              <img src="img/tubo2.webp" alt="" />
+              <img src="img/bin.webp" alt="" />
+              <img src="img/bin.webp" alt="" />
             </div>
 
             <div class="muyudoSNS spOnly">
@@ -412,6 +428,12 @@
             </div>
             <div class="cItem">
               <img src="img/hako1.webp" alt="" />
+              <img src="img/bin.webp" alt="" />
+              <img src="img/bin.webp" alt="" />
+              <img src="img/tubo.webp" alt="" />
+              <img src="img/tubo.webp" alt="" />
+              <img src="img/tubo.webp" alt="" />
+              <img src="img/book1.webp" alt="" />
             </div>
           </div>
         </div>
