調整　画像なし対応

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <div class="shelfBoard"></div>
             <h3>Web</h3>
 
-            <div class="works_img"><img src="img/webtest.jpg" alt="" /></div>
+            <div class="works_img"><img src="img/web.jpg" alt="" /></div>
 
             <p class="accesory_text">
               個性派から定番まで<br />
@@ -231,7 +231,7 @@
             <div class="shelfBoard"></div>
             <h3>Movie</h3>
 
-            <div class="works_img"><img src="" alt="" /></div>
+            <div class="works_img">画像準備中</div>
 
             <p class="accesory_text">
               映像制作、編集やweb用の<br />アニメーションアイコン等を作成し<br />コンテンツをより豊かにします。
@@ -263,7 +263,7 @@
             <div class="shelfBoard"></div>
             <h3>Other</h3>
 
-            <div class="works_img"><img src="" alt="" /></div>
+            <div class="works_img">画像準備中</div>
 
             <p class="accesory_text">
               夢遊堂ならではの世界観で<br />造形物や雑貨を作っていきます。
@@ -382,7 +382,7 @@
               </div>
             </div>
             <div class="contactBox">
-              <h2 class="pcOnly">creator</h2>
+              <h2 class="pcOnly">contact</h2>
               <p class="contactInfo">
                 活動に対するお問い合わせや <br />近況はこちらから
               </p>
